--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
 spring.application.name=carros-electricos
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
 
+spring.datasource.url=jdbc:sqlserver://sqlnoprod.privatelink.database.windows.net:1433;database=Db_App_ECM_NoProd
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect  # Update this for SQL Server dialect
